--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,12 @@
 @tailwind utilities;
 
 
-body{
+#root{
     height: 100vh; width: 100vw;
+    overflow: hidden;
+    display: flex;
+}
+
+body {
+    transition: background-color 0.5s ease, color 0.5s ease;
 }
